--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,20 @@
 {
   "compilerOptions": {
-    "jsx": "react-jsx",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "module": "esnext",
+    "newLine": "LF",
+    "sourceMap": true,
+    "strict": true,
+    "noUncheckedIndexedAccess": true,
+    "declaration": true,
     "moduleResolution": "node",
-    "target": "es5",
-    "allowJs": true,
-    "allowSyntheticDefaultImports": true,
+    "lib": ["dom", "esnext"],
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "skipLibCheck": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": true,
-    "noUncheckedIndexedAccess": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "strict": true
-  },
-  "include": ["src", ".eslintrc.js"]
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true
+  }
 }
