more setup things

--- a/common/tsconfig.json
+++ b/common/tsconfig.json
@@ -2,7 +2,9 @@
   "extends": "../tsconfig.json",
   "include": ["src"],
   "compilerOptions": {
-    "outDir": "./build"
+    "outDir": "./build",
+    "rootDir": "src",
+    "isolatedModules": true
   }
 }
 
