--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,19 @@
   "description": "Momence app server",
   "main": "index.ts",
   "scripts": {
-    "build": "tsc -p ./tsconfig.json --sourceMap --skipLibCheck --outDir ./build"
+    "build": "tsc -p tsconfig.json",
+    "watch": "tsc -p tsconfig.json -w --preserveWatchOutput",
+    "start": "node build/index.js",
+    "start-dev": "nodemon src/index.ts"
   },
-  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "node-fetch-commonjs": "^3.3.2"
+  },
   "devDependencies": {
-    "@types/node": "^20.10.5"
+    "@types/node": "^20.10.5",
+    "nodemon": "^3.0.2",
+    "ts-node": "^10.9.2"
   }
 }
