--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "start-dev": "nodemon src/index.ts"
   },
   "dependencies": {
+    "date-fns": "^3.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "node-fetch-commonjs": "^3.3.2"
