--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "common:build": "npm run build --workspace common",
     "server:build": "npm run build --workspace server",
+    "web:build": "npm run build --workspace web",
     "server:dev": "npm run start-dev --workspace server",
     "server:start": "npm run start --workspace server",
     "web:start": "npm run start --workspace web"
