--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "web:build": "npm run build --workspace web",
     "server:dev": "npm run start-dev --workspace server",
     "server:start": "npm run start --workspace server",
-    "web:start": "npm run start --workspace web"
+    "web:start": "npm run start --workspace web",
+    "postinstall": "npm run common:build"
   },
   "workspaces": [
     "common",
