--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "server:dev": "npm run start-dev --workspace server",
     "server:start": "npm run start --workspace server",
     "web:start": "npm run start --workspace web",
-    "postinstall": "npm run common:build"
+    "postinstall": "npm run common:build",
+    "start": "npm run server:start"
   },
   "workspaces": [
     "common",
